2014-??-??: 3.1.1

	Bugfixes:

	all : fixed wrong handling of "" and null in haxe.io.Path.join
	all : fixed invalid cast-to-self generation on some abstracts
	all : removed @:to Dynamic from UInt to avoid issues in the Map selection algorithm
	all : fixed various issues with member/static extension macros
	flash : fixed invalid override involving single-constraint type parameters
	js : disable Std.string optimization of basic type to avoid problems with null values

2014-03-04: 3.1.0

	New features:

	all : allowed null-patterns in pattern matching
	all : allowed extractors in pattern matching using => syntax
	all : allowed extending generic type parameters
	all : allowed (expr : type) syntax (ECheckType)
	all : allowed @:enum and @:forward on abstracts
	all : allowed using abstracts as static extension
	all : allowed Class.new
	all : added EnumValue.match
	all : allow multiple structural extension using { > T1, > T2, fields }
	all : inline array and structure declarations if possible
	cs : added -net-lib
	cs : support for native delegates
	cs : support for attributes
	cs : support for events

	Standard Library:

	all : support abstract types in haxe.rtti.XmlParser
	all : added Std.instance
	all : added length field to BytesBuffer, BytesOutput, BytesInput and StringBuf
	all : added UInt for all targets
	all : added Array.indexOf and Array.lastIndexOf
	all : added haxe.xml.Printer
	all : added haxe.Int32 as abstract type
	all : added haxe.format.JsonParser/Printer

	General improvements and optimizations:

	all : optimized pattern matching output
	all : allowed recursive type parameter constraints
	all : improved support of custom @:coreType abstracts
	all : evaluate conditional expressions in @:require
	all : improved inline constructors by detecting more cases where it can be applied
	js : improved inlining
	js : always use JSON extern (compile with -D old-browser to disable)
	js : added -D js-flatten
	js : added -D js-es5
	cpp : improved side-effect detection
